Implement Ace support(?)

--- a/views/tex/edit.pug
+++ b/views/tex/edit.pug
@@ -7,6 +7,6 @@ block tex_body
         div.col-xs-1
             button.btn.btn-primary#render Render
         div.col-xs-5
-            textarea.form-control#input(rows="20", cols="50") #{note.body}
+            div#editor #{note.body}
         div.col-xs-6
             div#output
