--- a/static/css/tex/global.css
+++ b/static/css/tex/global.css
@@ -1,5 +1,4 @@
-#body-content,
-#body-content *:not(.glyphicon) {
+#body-content {
     font-family: 'Source Sans Pro', 'Roboto', Helvetica, Arial, sans-serif;
 }
 
