Fix some issues with Markdown / LaTeX compatibility

--- a/static/css/tex/edit.css
+++ b/static/css/tex/edit.css
@@ -20,6 +20,13 @@
     overflow: auto;
 }
 
+#output code {
+    padding: 0;
+    font-size: 100%;
+    color: inherit !important;
+    background-color: inherit !important;
+}
+
 #editor, #editor * {
     font-family: monospace !important;
 }
